--- a/style.css
+++ b/style.css
@@ -1,5 +1,98 @@
 body {
-  margin: 20% auto;
-  width: 50%;
-  height: 75%;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  background-color: #F5EFE6;
+  font-size: 20px;
+  color: #577899;
+}
+
+.calculator{
+  display: flex;
+  flex-direction: column;
+  background-color:#AEBDCA;
+  width:500px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 5px 5px #7895B2;
+}
+.inputs{
+  display: flex;
+  margin: 50px auto 10px;
+  gap: 10px;
+  padding: 5px;
+  text-align: center;
+}
+
+input{
+  background-color: #F5EFE6;
+  border: none;
+  padding: 5px;
+  color: #7895B2;
+  border-radius: 10px;
+  margin-top: 3px;
+}
+
+.input{
+  display: flex;
+  flex-direction: column;
+  width: 170px;
+  margin: auto;
+  padding: 5px;
+}
+
+
+.functions{
+  display: flex;
+  margin: 0 auto 10px;
+}
+
+.btn{
+  border: none;
+  background-color: #F5EFE6;
+  color: #7895B2;
+  border-radius: 999px;
+  padding: 5px 10px;
+  margin:5px;
+  width: 80px;
+}
+
+.btn:hover{
+  background-color: #7895B2;
+  color: white;
+}
+
+.btn:active{
+  background-color: #577899;
+}
+
+.btnContainer{
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.equals{
+  background-color: #7895B2;
+  color:#F5EFE6;
+}
+
+.equals:hover{
+  background-color: #577899;
+}
+
+.equals:active{
+  background-color: #7895B2;
+}
+
+.clear{
+  
+  background-color: #F5EFE6;
+  border: 2px solid #7895B2;
+  color: #7895B2;
+}
+
+#result{
+margin: auto;
 }
